Rebuild of SoftwareUpdater